--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@types/react": "~18.0.27",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "expo": "~48.0.5",
+    "expo-image-picker": "~14.1.1",
+    "expo-location": "~15.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.3",
+    "react-native-maps": "1.3.2",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
