--- a/package.json
+++ b/package.json
@@ -19,11 +19,16 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.3",
+    "react-native-dotenv": "^3.4.8",
     "react-native-maps": "1.3.2",
-    "typescript": "^4.9.4"
+    "react-native-yamap": "^4.1.17",
+    "typescript": "^4.9.4",
+    "expo-sqlite": "~11.1.1",
+    "expo-splash-screen": "~0.18.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/react-native-dotenv": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
     "eslint": "^8.35.0",
